--- a/backend/templates/profiles/settings.html
+++ b/backend/templates/profiles/settings.html
@@ -48,7 +48,7 @@
 	  <img class="avatar left"
 	       src="{{user.avatar.url}}"/>
 	  {% endif %}
-	  <div class="clearfix"></div>
+	  <div class="clearfix"></div> <br/>
 	  <!-- Background -->
 	  <label class="btn btn-default btn-file left">
 	    <i class="fa fa-upload"></i>
