--- a/backend/static_serve/styles/sass/style.scss
+++ b/backend/static_serve/styles/sass/style.scss
@@ -122,3 +122,15 @@ footer {
 	font-weight: bold;
     }
 }
+
+/* Settings */
+.settings {
+    .avatar {
+	width: 40px;
+	margin-left: 10px;
+    }
+    .background {
+	margin-left: 10px;
+	height: 40px;
+    }
+}
