--- a/backend/templates/elements/header.html
+++ b/backend/templates/elements/header.html
@@ -4,7 +4,7 @@
 	<div class="col-xs-12 col-sm-4">
 	  <!-- Logo -->
 	  <div class="dropdown">
-	    <a href="/" class="logo">
+	    <a href="https://fictionhub.io" class="logo">
 	      <img src="/static/img/logo_128x128.png"/>
 	      fiction<b>hub</b>
 	    </a>
