--- a/backend/templates/posts/post.html
+++ b/backend/templates/posts/post.html
@@ -22,6 +22,8 @@
     <input type="hidden" name="rm" value="2">    
     <input type="hidden" name="return"
 	   value="https://fictionhub.io/series/{{post.series.slug}}/{{user.username}}/purchase">
+    <input name="return_url" type="hidden"
+	   value="https://fictionhub.io/series/{{post.series.slug}}/{{user.username}}/purchase" />
     <!-- Cancel button? Not sure if works -->
     <input type="hidden" name="cbt" value="Cancel">
     <input type="hidden" name="cancel_return"
