--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -44,6 +44,7 @@
   {% include "elements/alert-subscribed.html" %}      
 
   <!-- Scripts bundle -->
+  <script src="/static/js/vendor/jquery-3.2.1.min.js"></script>
   <script src="{% static "/js/dist/fictionhub.js" %}" async></script>
 
   <script>
