--- a/backend/static/styles/sass/_general.scss
+++ b/backend/static/styles/sass/_general.scss
@@ -26,7 +26,7 @@ html, body {
 }
 
 /* Typography */
-article h1, h1 a {
+article h1 {
     /* font-size: 36px; */
     font-size: 32px;    
     font-weight: bold;
