--- a/backend/templates/posts/post-detail.html
+++ b/backend/templates/posts/post-detail.html
@@ -9,7 +9,8 @@
   <meta name="description"
 	content="{{post | markdownify:True | striptags }}">
   <meta name="keywords" content="Fiction, SciFi, Fantasy, Writing, Reading, Stories.">
-  <meta name="author" content="Ray Alez">  
+  <meta name="author" content="Ray Alez">
+  <link rel="canonical" href="https://fictionhub.io/post/{{post.slug}}">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
   <link rel="shortcut icon" href="https://fictionhub.io/static/img/favicon.ico"/>
