--- a/backend/templates/elements/story-suggestions.html
+++ b/backend/templates/elements/story-suggestions.html
@@ -51,7 +51,7 @@
     </div>   <!-- End .col-xs-12 col-sm-4 -->
     {% else %}
     <div class="col-xs-12 col-sm-4">
-      <a href="/post/story-writing-process">
+      <a href="/post/writing-resources">
 	<article class="story-box">
 	  <div class="thumbnail"
 	       style="background-image:
