--- a/backend/templates/elements/story-suggestions.html
+++ b/backend/templates/elements/story-suggestions.html
@@ -33,7 +33,7 @@
       </a>
     </div>   <!-- End .col-xs-12 col-sm-4 -->	  
 
-    {% if 12|make_list|random == '1'%}
+    {% if 12|make_list|random == '1' or True %}
     <div class="col-xs-12 col-sm-4">
       <a href="/post/story-writing-process">
 	<article class="story-box">
