Src for users and subscribers.

--- a/backend/templates/elements/login.html
+++ b/backend/templates/elements/login.html
@@ -35,6 +35,9 @@
 		       placeholder="Password (8+ symbols)">
 		<br/>
 
+		<!-- Src -->
+                <input name="src" type="hidden" id="src" />
+		
 		<!-- Submit -->
 		<button type="submit"
 			class="btn btn-cta right">
