--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -43,19 +43,15 @@
   <!-- Alerts -->
   {% include "elements/alert-subscribed.html" %}      
 
-  <!-- Scripts bundle -->
-  <script src="/static/js/vendor/jquery-3.2.1.min.js"></script>
+  <!-- Scripts -->
+  <script src="/static/js/vendor/jquery-3.2.1.min.js" async></script>
+  <script src="/static/js/vendor/js.cookie-2.1.4.min.js" async></script>
+  <script src="/static/js/vendor/jquery.query-object.js" async></script>
+  <script src="{% static "/js/analytics.js" %}" async></script>  
   <script src="{% static "/js/dist/fictionhub.js" %}" async></script>
 
-  <script>
-    /* Google Analytics */
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-44003603-24', 'auto');
-    ga('send', 'pageview');
+  <script>
   </script>
   
 </body>
