--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -44,9 +44,9 @@
   {% include "elements/alert-subscribed.html" %}      
 
   <!-- Scripts -->
-  <script src="/static/js/vendor/jquery-3.2.1.min.js" async></script>
-  <script src="/static/js/vendor/js.cookie-2.1.4.min.js" async></script>
-  <script src="/static/js/vendor/jquery.query-object.js" async></script>
+  <script src="/static/js/vendor/jquery-3.2.1.min.js"></script>
+  <!-- <script src="/static/js/vendor/js.cookie-2.1.4.min.js" async></script> -->
+  <!-- <script src="/static/js/vendor/jquery.query-object.js" async></script> -->
   <script src="{% static "/js/analytics.js" %}" async></script>  
   <script src="{% static "/js/dist/fictionhub.js" %}" async></script>
 
