--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -12,9 +12,10 @@
   <!-- Styles -->
   <link rel="stylesheet" href="{% static "/styles/vendor.css" %}">  
   <link rel="stylesheet" href="{% static "/styles/style.css" %}">
-  {% if user.dark_interface  %}
+  {% if user.dark_interface %}
   <link rel="stylesheet" href="{% static "/styles/dark.css" %}">  
   {% endif  %}
+  <meta name="flattr:id" content="xvwjrw">
 </head>
 
 <body>
