--- a/backend/templates/pages/about.html
+++ b/backend/templates/pages/about.html
@@ -21,7 +21,14 @@
 	<img src="/media/images/pages/about/editor.png"/><br/>
 	<p>And publish them in a beautiful, easy to read format:</p>
 	<img src="/media/images/pages/about/publish.png"/>
+	<p>Reading features:</p>
+	<ul>
+	  <li>Press <b>S</b> to autoscroll, press it once again to scroll faster, prest <b>Shift+S</b> to slow down scrolling, press <b>Esc</b> to stop scrolling. </li>
+	  <li>Your reading position is automatically saved, so you can conveniently pick up where you left off.  </li>
+	  <li>Press <b>D</b> to enable the dark interface. </li>	  
+	</ul>
 	<!-- <p>[Editor screenshot]</p> -->
+	<img src="/media/images/pages/about/dark-ui.png"/>
 	<h2>Find your audience</h2>
 	<p> Our <a href="/browse/">browse page</a> makes it very easy for readers to discover the stories you have shared with our community. The best stories are also featured on our front page, suggested to the readers who liked similar stories, shared with our&nbsp;<a href="https://twitter.com/fictionhub">social media followers</a>, and sent to all of our subscribers in the weekly email digest.</p>
 	<img src="/media/images/pages/about/story-suggestions.png"/>	
