--- a/backend/static/styles/sass/dark.scss
+++ b/backend/static/styles/sass/dark.scss
@@ -14,6 +14,12 @@ header {
 	}
     }
 }
+.subnav {
+    background: rgba(162, 168, 171, 0.1);
+    border: none;
+    
+}
+
 body, .page {
     background: #232626;
     background: #111111;
@@ -34,7 +40,7 @@ a, p, li {
 	background: #222!important;
     }
 }
-.dropdown-menu {
+.dropdown-menu, .subnav .btn-default {
     background: #222222;
     a {
 	color: $text-color!important;
@@ -47,10 +53,36 @@ article h1 {
     color: #a2a8ab;
     border-bottom: 1px solid rgba(162, 168, 171, 0.52);
 }
+article .panel {
+border: none;
+    background: #2d2d2e;
+    color: #a2a8ab;    
+}
+article .post-footer {
+    background: rgba(162, 168, 171, 0.1);
+    border: none;
+}
 
-
-input {
+input, textarea {
     background: #1a1c1c !important;
     border: none !important;
     outline: none !important;    
+}
+
+/* SimpleMDE */
+.editor {
+    .CodeMirror {
+	background: #1a1c1c !important;
+	color: white!important;
+	border:none!important;
+    }
+    .editor-toolbar {
+	background: #1a1c1c !important;    
+	border: none!important;
+    }
+    .editor-statusbar {
+	border: none!important;
+	background: #1a1c1c !important;        
+    }
+
 }
