--- a/backend/static_serve/styles/dark.css
+++ b/backend/static_serve/styles/dark.css
@@ -30,59 +30,72 @@ body, .page {
 }
 
 /* line 28, sass/dark.scss */
+::-webkit-scrollbar-track {
+  background-color: #1f1f1f;
+}
+
+/* line 32, sass/dark.scss */
+::-webkit-scrollbar-thumb {
+  background-color: #111111;
+}
+
+/* line 37, sass/dark.scss */
 article {
   background: #1f1f1f;
 }
 
-/* line 32, sass/dark.scss */
+/* line 41, sass/dark.scss */
 a, p, li {
   color: #a2a8ab;
 }
 
-/* line 35, sass/dark.scss */
+/* line 44, sass/dark.scss */
 .btn-default {
   background: #222;
   color: #a2a8ab !important;
 }
-/* line 39, sass/dark.scss */
+/* line 48, sass/dark.scss */
 .btn-default:hover {
   background: #222 !important;
 }
 
-/* line 43, sass/dark.scss */
+/* line 52, sass/dark.scss */
 .dropdown-menu, .subnav .btn-default {
   background: #222222;
 }
-/* line 45, sass/dark.scss */
+/* line 54, sass/dark.scss */
 .dropdown-menu a, .subnav .btn-default a {
   color: #a2a8ab !important;
 }
 
-/* line 49, sass/dark.scss */
+/* line 58, sass/dark.scss */
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
   background: #2f3333;
 }
 
-/* line 52, sass/dark.scss */
-article h1 {
+/* line 62, sass/dark.scss */
+article h1, article h2, article h3, article h4, article h5, article h6, article .read-more {
   color: #a2a8ab;
+}
+/* line 65, sass/dark.scss */
+article h1 {
   border-bottom: 1px solid rgba(162, 168, 171, 0.52);
 }
 
-/* line 56, sass/dark.scss */
+/* line 71, sass/dark.scss */
 article .panel {
   border: none;
   background: #2d2d2e;
   color: #a2a8ab;
 }
 
-/* line 61, sass/dark.scss */
+/* line 76, sass/dark.scss */
 article .post-footer {
   background: rgba(162, 168, 171, 0.1);
   border: none;
 }
 
-/* line 66, sass/dark.scss */
+/* line 81, sass/dark.scss */
 input, textarea {
   background: #1a1c1c !important;
   border: none !important;
@@ -90,18 +103,18 @@ input, textarea {
 }
 
 /* SimpleMDE */
-/* line 74, sass/dark.scss */
+/* line 89, sass/dark.scss */
 .editor .CodeMirror {
   background: #1a1c1c !important;
   color: white !important;
   border: none !important;
 }
-/* line 79, sass/dark.scss */
+/* line 94, sass/dark.scss */
 .editor .editor-toolbar {
   background: #1a1c1c !important;
   border: none !important;
 }
-/* line 83, sass/dark.scss */
+/* line 98, sass/dark.scss */
 .editor .editor-statusbar {
   border: none !important;
   background: #1a1c1c !important;
