--- a/backend/static_serve/styles/sass/style.scss
+++ b/backend/static_serve/styles/sass/style.scss
@@ -18,6 +18,7 @@ $black-bluish: #3d454b;
 @import 'header';
 @import 'home';
 @import 'posts';
+@import 'fountain';
 
 .subscription-box {
     margin-top: 20px;
