--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -49,11 +49,14 @@
   <!-- Scripts -->
   <script src="/static/js/vendor/jquery-3.2.1.min.js"></script>
   <script src="/static/js/vendor/mousetrap.min.js"></script>
-  <script src="/static/js/autoscroll.js"></script>    
+  <script src="/static/js/autoscroll.js"></script>
+  <script src="/static/js/vendor/fountain.js"></script>
+  <script src="/static/js/screenplay.js"></script>      
   <!-- <script src="/static/js/vendor/js.cookie-2.1.4.min.js" async></script> -->
   <!-- <script src="/static/js/vendor/jquery.query-object.js" async></script> -->
   <script src="{% static "/js/analytics.js" %}" async></script>  
   <script src="{% static "/js/dist/fictionhub.js" %}" async></script>
+
 
   {% if post %}
   <script>
@@ -76,5 +79,7 @@
   </script>  
   {% endif %}
 </body>
+
+
 
 </html>
