--- a/backend/static/styles/sass/_fountain.scss
+++ b/backend/static/styles/sass/_fountain.scss
@@ -118,7 +118,7 @@ https://github.com/mattdaly/Fountain.js/blob/master/app/assets/css/fountain-js.c
     }
     .title-page {
 	text-align: center;
-	height: 120px;
+	min-height: 120px;
     }
 }
 .editor-preview-side div.dialogue {    
