--- a/backend/templates/pages/about.html
+++ b/backend/templates/pages/about.html
@@ -23,8 +23,8 @@
 	<img src="/media/images/pages/about/publish.png"/>
 	<p>Reading features:</p>
 	<ul>
-	  <li>Press <b>S</b> to autoscroll, press it once again to scroll faster, prest <b>Shift+S</b> to slow down scrolling, press <b>Esc</b> to stop scrolling. </li>
-	  <li>Your reading position is automatically saved, so you can conveniently pick up where you left off.  </li>
+	  <li>Press <b>S</b> to autoscroll, press it once again to scroll faster, prest <b>W</b> to slow down scrolling, press <b>Q</b> to stop scrolling. </li>
+	  <li>Your reading position is automatically saved, so you can conveniently pick up where you left off. </li>
 	  <li>Press <b>D</b> to enable the dark interface. </li>
 	  <li>For the perfect reading experience, use <b>F</b> to switch to the full-screen mode and <b>'Ctrl +'</b> or <b>'Ctrl -'</b> to adjust the font size.</li>
 
