--- a/backend/static/styles/sass/_fountain.scss
+++ b/backend/static/styles/sass/_fountain.scss
@@ -53,7 +53,12 @@ https://github.com/mattdaly/Fountain.js/blob/master/app/assets/css/fountain-js.c
     font-family: "Courier";        
     h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
-	font-family: "Courier";        
+	font-family: "Courier";
+	font-size: 22px;
+	margin: 0;
+    }
+    h3 {
+	font-weight: bold;
     }
 }
 .screenplay div.dialogue {    
