--- a/backend/static_serve/styles/style.css
+++ b/backend/static_serve/styles/style.css
@@ -1124,31 +1124,37 @@ https://github.com/mattdaly/Fountain.js/blob/master/app/assets/css/fountain-js.c
 .screenplay h1, .screenplay h2, .screenplay h3, .screenplay h4, .screenplay h5, .screenplay h6 {
   font-weight: normal;
   font-family: "Courier";
+  font-size: 22px;
+  margin: 0;
+}
+/* line 60, sass/_fountain.scss */
+.screenplay h3 {
+  font-weight: bold;
 }
 
-/* line 59, sass/_fountain.scss */
+/* line 64, sass/_fountain.scss */
 .screenplay div.dialogue {
   margin-bottom: 20px !important;
 }
 
 /* Simplemde */
 /* script */
-/* line 71, sass/_fountain.scss */
+/* line 76, sass/_fountain.scss */
 .editor-preview-side h2 {
   text-align: right;
 }
 
-/* line 74, sass/_fountain.scss */
+/* line 79, sass/_fountain.scss */
 .editor-preview-side h2.left-aligned {
   text-align: left;
 }
 
-/* line 77, sass/_fountain.scss */
+/* line 82, sass/_fountain.scss */
 .editor-preview-side h3 {
   position: relative;
 }
 
-/* line 80, sass/_fountain.scss */
+/* line 85, sass/_fountain.scss */
 .editor-preview-side h3:before {
   content: attr(id);
   font-weight: bold;
@@ -1156,7 +1162,7 @@ https://github.com/mattdaly/Fountain.js/blob/master/app/assets/css/fountain-js.c
   position: absolute;
 }
 
-/* line 83, sass/_fountain.scss */
+/* line 88, sass/_fountain.scss */
 .editor-preview-side h3:after {
   content: attr(id);
   font-weight: bold;
@@ -1164,92 +1170,92 @@ https://github.com/mattdaly/Fountain.js/blob/master/app/assets/css/fountain-js.c
   position: absolute;
 }
 
-/* line 87, sass/_fountain.scss */
+/* line 92, sass/_fountain.scss */
 .editor-preview-side div.dialogue {
   margin-left: auto;
   margin-right: auto;
   width: 68%;
 }
 
-/* line 90, sass/_fountain.scss */
+/* line 95, sass/_fountain.scss */
 .editor-preview-side div.dialogue h4 {
   margin-bottom: 0;
   margin-left: 23%;
 }
 
-/* line 91, sass/_fountain.scss */
+/* line 96, sass/_fountain.scss */
 .editor-preview-side div.dialogue p.parenthetical, .editor-preview-side div.dialogue h1.parenthetical, .editor-preview-side div.dialogue h2.parenthetical, .editor-preview-side div.dialogue h3.parenthetical, .editor-preview-side div.dialogue h4.parenthetical, .editor-preview-side div.dialogue h5.parenthetical, .editor-preview-side div.dialogue h6.parenthetical {
   margin-bottom: 0;
   margin-top: 0;
   margin-left: 11%;
 }
 
-/* line 92, sass/_fountain.scss */
+/* line 97, sass/_fountain.scss */
 .editor-preview-side div.dialogue p, .editor-preview-side div.dialogue h1, .editor-preview-side div.dialogue h2, .editor-preview-side div.dialogue h3, .editor-preview-side div.dialogue h4, .editor-preview-side div.dialogue h5, .editor-preview-side div.dialogue h6 {
   margin-bottom: 0;
   margin-top: 0;
 }
 
-/* line 94, sass/_fountain.scss */
+/* line 99, sass/_fountain.scss */
 .editor-preview-side div.dual-dialogue {
   margin: 2em 0 0.9em 2%;
   width: 95%;
 }
 
-/* line 95, sass/_fountain.scss */
+/* line 100, sass/_fountain.scss */
 .editor-preview-side div.dual-dialogue div.dialogue {
   display: inline-block;
   margin: 0;
   width: 45%;
 }
 
-/* line 96, sass/_fountain.scss */
+/* line 101, sass/_fountain.scss */
 .editor-preview-side div.dual-dialogue div.dialogue h4 {
   margin-top: 0;
 }
 
-/* line 97, sass/_fountain.scss */
+/* line 102, sass/_fountain.scss */
 .editor-preview-side div.dual-dialogue div.dialogue.right {
   float: right;
 }
 
-/* line 99, sass/_fountain.scss */
+/* line 104, sass/_fountain.scss */
 .editor-preview-side p.centered, .editor-preview-side h1.centered, .editor-preview-side h2.centered, .editor-preview-side h3.centered, .editor-preview-side h4.centered, .editor-preview-side h5.centered, .editor-preview-side h6.centered {
   text-align: center;
   width: 92.5%;
 }
 
-/* line 101, sass/_fountain.scss */
+/* line 106, sass/_fountain.scss */
 .editor-preview-side p.section, .editor-preview-side h1.section, .editor-preview-side h2.section, .editor-preview-side h3.section, .editor-preview-side h4.section, .editor-preview-side h5.section, .editor-preview-side h6.section {
   margin-left: -30px;
 }
 
-/* line 102, sass/_fountain.scss */
+/* line 107, sass/_fountain.scss */
 .editor-preview-side p.synopsis, .editor-preview-side h1.synopsis, .editor-preview-side h2.synopsis, .editor-preview-side h3.synopsis, .editor-preview-side h4.synopsis, .editor-preview-side h5.synopsis, .editor-preview-side h6.synopsis {
   margin-left: -20px;
 }
 
-/* line 104, sass/_fountain.scss */
+/* line 109, sass/_fountain.scss */
 .editor-preview-side span.italic {
   font-style: italic;
 }
 
-/* line 105, sass/_fountain.scss */
+/* line 110, sass/_fountain.scss */
 .editor-preview-side span.bold {
   font-weight: bold;
 }
 
-/* line 106, sass/_fountain.scss */
+/* line 111, sass/_fountain.scss */
 .editor-preview-side span.underline {
   text-decoration: underline;
 }
 
 /* Custom */
-/* line 109, sass/_fountain.scss */
+/* line 114, sass/_fountain.scss */
 .editor-preview-side {
   font-family: "Courier";
 }
-/* line 111, sass/_fountain.scss */
+/* line 116, sass/_fountain.scss */
 .editor-preview-side h1, .editor-preview-side h2, .editor-preview-side h3, .editor-preview-side h4, .editor-preview-side h5, .editor-preview-side h6 {
   font-weight: normal;
   font-family: "Courier";
@@ -1257,13 +1263,13 @@ https://github.com/mattdaly/Fountain.js/blob/master/app/assets/css/fountain-js.c
   height: 20px;
   font-size: 21px;
 }
-/* line 119, sass/_fountain.scss */
+/* line 124, sass/_fountain.scss */
 .editor-preview-side .title-page {
   text-align: center;
   min-height: 120px;
 }
 
-/* line 124, sass/_fountain.scss */
+/* line 129, sass/_fountain.scss */
 .editor-preview-side div.dialogue {
   margin-bottom: 20px !important;
 }
