--- a/backend/static_serve/styles/sass/_fountain.scss
+++ b/backend/static_serve/styles/sass/_fountain.scss
@@ -48,6 +48,7 @@ https://github.com/mattdaly/Fountain.js/blob/master/app/assets/css/fountain-js.c
     width: 80%;
     @media  (max-width: 740px) {
 	width: 100%;
+	word-wrap: break-word;
     }    
     margin: auto;
     font-family: "Courier";        
