--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -33,7 +33,8 @@
     <hr/>
     contact@fictionhub.io
     <div class="right">
-      Made by <a href="http://rayalez.com">Ray Alez</a>
+      <!-- Made by <a class="white" href="http://rayalez.com">Ray Alez</a> -->
+      Made by <a class="white" href="https://startuplab.io">Startup Lab</a>      
     </div>
   </footer>
   
