Startup Lab footer.

--- a/backend/static/styles/dark.css
+++ b/backend/static/styles/dark.css
@@ -1,121 +1,1 @@
-/* line 3, sass/dark.scss */
-header {
-  background: #141414;
-  border: none;
-}
-/* line 6, sass/dark.scss */
-header .logo {
-  color: rgba(162, 168, 171, 0.79);
-  font-weight: lighter;
-}
-/* line 9, sass/dark.scss */
-header .logo img {
-  display: none;
-}
-/* line 12, sass/dark.scss */
-header .logo b {
-  font-weight: lighter;
-}
-
-/* line 17, sass/dark.scss */
-.subnav {
-  background: rgba(162, 168, 171, 0.1);
-  border: none;
-}
-
-/* line 23, sass/dark.scss */
-body, .page {
-  background: #232626;
-  background: #111111;
-}
-
-/* line 28, sass/dark.scss */
-::-webkit-scrollbar-track {
-  background-color: #1f1f1f;
-}
-
-/* line 32, sass/dark.scss */
-::-webkit-scrollbar-thumb {
-  background-color: #111111;
-}
-
-/* line 37, sass/dark.scss */
-article {
-  background: #1f1f1f;
-}
-
-/* line 41, sass/dark.scss */
-a, p, li {
-  color: #a2a8ab;
-}
-
-/* line 44, sass/dark.scss */
-.btn-default {
-  background: #222;
-  color: #a2a8ab !important;
-}
-/* line 48, sass/dark.scss */
-.btn-default:hover {
-  background: #222 !important;
-}
-
-/* line 52, sass/dark.scss */
-.dropdown-menu, .subnav .btn-default {
-  background: #222222;
-}
-/* line 54, sass/dark.scss */
-.dropdown-menu a, .subnav .btn-default a {
-  color: #a2a8ab !important;
-}
-
-/* line 58, sass/dark.scss */
-.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
-  background: #2f3333;
-}
-
-/* line 62, sass/dark.scss */
-article h1, article h2, article h3, article h4, article h5, article h6, article .read-more {
-  color: #a2a8ab;
-}
-/* line 65, sass/dark.scss */
-article h1 {
-  border-bottom: 1px solid rgba(162, 168, 171, 0.52);
-}
-
-/* line 71, sass/dark.scss */
-article .panel {
-  border: none;
-  background: #2d2d2e;
-  color: #a2a8ab;
-}
-
-/* line 76, sass/dark.scss */
-article .post-footer {
-  background: rgba(162, 168, 171, 0.1);
-  border: none;
-}
-
-/* line 81, sass/dark.scss */
-input, textarea {
-  background: #1a1c1c !important;
-  border: none !important;
-  outline: none !important;
-}
-
-/* SimpleMDE */
-/* line 89, sass/dark.scss */
-.editor .CodeMirror {
-  background: #1a1c1c !important;
-  color: white !important;
-  border: none !important;
-}
-/* line 94, sass/dark.scss */
-.editor .editor-toolbar {
-  background: #1a1c1c !important;
-  border: none !important;
-}
-/* line 98, sass/dark.scss */
-.editor .editor-statusbar {
-  border: none !important;
-  background: #1a1c1c !important;
-}
+header{background:#141414;border:none}header .logo{color:rgba(162,168,171,0.79);font-weight:lighter}header .logo img{display:none}header .logo b{font-weight:lighter}.subnav{background:rgba(162,168,171,0.1);border:none}body,.page{background:#232626;background:#111111}::-webkit-scrollbar-track{background-color:#1f1f1f}::-webkit-scrollbar-thumb{background-color:#111111}article{background:#1f1f1f}a,p,li{color:#a2a8ab}.btn-default{background:#222;color:#a2a8ab !important}.btn-default:hover{background:#222 !important}.dropdown-menu,.subnav .btn-default{background:#222222}.dropdown-menu a,.subnav .btn-default a{color:#a2a8ab !important}.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus{background:#2f3333}article h1,article h2,article h3,article h4,article h5,article h6,article .read-more{color:#a2a8ab}article h1{border-bottom:1px solid rgba(162,168,171,0.52)}article .panel{border:none;background:#2d2d2e;color:#a2a8ab}article .post-footer{background:rgba(162,168,171,0.1);border:none}input,textarea{background:#1a1c1c !important;border:none !important;outline:none !important}.editor .CodeMirror{background:#1a1c1c !important;color:#fff !important;border:none !important}.editor .editor-toolbar{background:#1a1c1c !important;border:none !important}.editor .editor-statusbar{border:none !important;background:#1a1c1c !important}
