--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -34,7 +34,11 @@
     contact@fictionhub.io
     <div class="right">
       <!-- Made by <a class="white" href="http://rayalez.com">Ray Alez</a> -->
-      Made by <a class="white" href="https://startuplab.io">Startup Lab</a>      
+      Made by <a class="white" href="https://startuplab.io">Startup Lab</a>
+      <a href="https://github.com/raymestalez/fictionhub">
+	<i class="fa fa-github"></i>
+      </a>      
+      
     </div>
   </footer>
   
