--- a/backend/templates/posts/post-detail.html
+++ b/backend/templates/posts/post-detail.html
@@ -34,6 +34,7 @@
     <div class="col-md-12 col-sm-12 post-detail">
       {% include "posts/post.html" with truncate=False %}
       {% include "elements/subscription-box.html" %}
+      {% include "elements/cta.html" %}      
       {% include "elements/story-suggestions.html" %}
       <br/>
       {% include "comments/comments.html" %}        
